# xivcrafter-rs

./: Cargo.toml  LICENSE  README.md  config.json  config.yaml
.github/workflows/: build.yaml  linter.yaml  release.yaml
src/: README.md  app.rs  crafter.rs  main.rs  ui.rs  utils.rs
src/crafter/: README.md  app.rs  crafter.rs  mod.rs
src/ui/: ui.rs
