[package]
name = "xivcrafter"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Automatically activates multiple crafting macros while refreshing food and potion buffs"
readme = "README.md"
repository = "https://github.com/kn-lim/xivcrafter-rs/"

[dependencies]
crossterm = "0.26.1"
dirs = "5.0"
enigo = "0.1.2"
tui = "0.19"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
